[package]
name = "global-radio"
version = "0.1.0"
description = "listen to radio stations from around the world!"
authors = ["kaj <notkaj@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
# radiobrowser = "0.6.1"
radiobrowser = { git = "https://gitlab.com/radiobrowser/radiobrowser-lib-rust.git" }
ratatui = "0.30.0"
throbber-widgets-tui = "0.11.0"
tokio = { version = "1.51.0", features = ["full"] }

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
